<resources>
    <string name="app_name">Survey Pelanggan Teh Kayu Aro</string>
    <string name="title">Survey Pelanggan \nTeh Kayu Aro</string>

    <string name="form_survey">Form Survey</string>
    <string name="csv_file_generated_text">CSV File berhasil dibuat</string>
    <string name="csv_file_not_generated_text">CSV File gagal dibuat</string>
    <string name="simpan">Simpan</string>
    <string name="export">Export to CSV</string>

    <string name="nama_kedai">Nama Kedai</string>
    <string name="alamat_kedai">Alamat Kedai</string>
    <string name="telp_kedai">08 …</string>
    <string name="nama_narasumber">Nama yang diinterview</string>
    <string name="posisi_narasumber">Pemilik / dsb</string>
    <string name="lama_berjualan">.. tahun / bulan</string>
    <string name="teh_dijual">contoh: Sariwangi, Singa, dsb</string>
    <string name="kenal_tehkayuaro">sudah / belum</string>
    <string name="teh_terlaris">Merk teh terlaris</string>
    <string name="harga_termurah">Rp. …</string>
    <string name="mau_jual_tehkayuaro">iya / tidak</string>
    <string name="bantuan">contoh: promosi, dsb</string>
    <string name="jika_tidak">alasan</string>
    <string name="nama_surveyor">Nama</string>
    <string name="saran">masukan dan saran</string>

    <string name="title_nama_kedai">Nama Kedai / Toko / Grosir </string>
    <string name="title_alamat_kedai">Alamat Kedai / Toko / Grosir</string>
    <string name="title_telp_kedai">Nomor Telepon Kedai / Toko / Grosir</string>
    <string name="title_nama_narasumber">Nama yang diinterview</string>
    <string name="title_posisi_narasumber">Posisi yang diinterview</string>
    <string name="title_lama_berjualan">Berapa lama sudah berjualan ?</string>
    <string name="title_teh_dijual">Teh apa saja yang dijual ?</string>
    <string name="title_kenal_tehkayuaro">Apa sudah kenal Teh Kayu Aro ?</string>
    <string name="title_teh_terlaris">Teh apa yang paling laris di kedai/toko/grosir ini ?</string>
    <string name="title_harga_termurah">Berapa harga termurah teh yang dijual di kedai/toko/grosir ini ?</string>
    <string name="title_mau_jual_tehkayuaro">Mau menjual Teh Kayu Aro ? Kita akan berikan promo dan sale.</string>
    <string name="title_jika_tidak">Jika tidak, kenapa ?</string>
    <string name="title_nama_surveyor">Nama Surveyor</string>
    <string name="title_saran">Masukan dan Saran</string>
    <string name="title_bantuan">Apa yang dapat kami bantu agar bapak/ibu dapat menjual Teh kayu Aro ?</string>
    <string name="save_data_success">Data Survey berhasil disimpan</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Ambil Foto</string>
    <string name="title_image">Tambahkan Foto Pelanggan</string>
    <string name="message">Berhasil Menambahkan Data !</string>
    <string name="data_survey">Data Survey Saya</string>
    <string name="search">Cari hasil survey ....</string>
    <string name="added_time">Added time</string>
    <string name="list">List Data Survey</string>
    <string name="choose_from_galery">Pilih Foto dari Galeri</string>
    <string name="choose_date">Pilih Bulan</string>
    <string name="list_note">Data Survey Keseluruhan </string>
    <string name="list_desc">Silahkan klik tombol "Export to CSV" untuk mengexport seluruh data survey ke dalam format excel. </string>
    <string name="data_null">Belum ada data survey yang anda masukkan ! \nSilahkan isi Form Survey !</string>
    <string name="delete_survey">Hapus Survey</string>
    <string name="delete_alert">Hapus data survey ini ?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="edit">Edit Data Survey</string>
    <string name="dots"> : </string>
    <string name="berjualan">Lama berjualan</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="masalah">Kendala dan masalah</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="kayu_aro">Teh Kayu Aro</string>
    <string name="rekap">Rekapitulasi Hasil Survey</string>
    <string name="jumlah_survey">Jumlah Responden Survey</string>
    <string name="brand">Brand Teh Kayu Aro</string>
    <string name="mau_jual">Mau menjual Teh Kayu Aro ?</string>
    <string name="kenal">Sudah Kenal</string>
    <string name="responden">... Responden</string>
    <string name="belum_kenal">Belum Kenal</string>
    <string name="jumlah_kenal">...</string>
    <string name="jumlah_belum_kenal">...</string>
    <string name="jumlah_mau_jual">...</string>
    <string name="tidak_mau">Tidak Mau Jual</string>
    <string name="jumlah_tidak_mau_jual">...</string>
    <string name="mau">Mau Menjual</string>
    <string name="sudah_kenal">Sudah Kenal</string>
    <string name="refresh">Refresh Page</string>
    <string name="tanggal_survey">Tanggal Survey</string>
    <string name="warning_image">Silahkan tembahkan foto pelanggan terlebih dahulu !</string>
</resources>