<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/primary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|end"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/title_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_nama_kedai"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/nama_kedai" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_location"
                    android:foregroundGravity="top"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/alamat_kedai" />

                <TextView
                    style="@style/Text.Medium"
                    android:id="@+id/tv_alamat_kedai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_kedai" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/Text.Medium"
                        android:id="@+id/tv_posisi_narasumber"
                        android:layout_width="130dp"
                        android:text="@string/posisi_narasumber"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Text.Medium"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/Text.Medium"
                        android:id="@+id/tv_nama_narasumber"
                        android:text="@string/nama_narasumber" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/Text.Medium"
                        android:layout_width="130dp"
                        android:text="@string/berjualan"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Text.Medium"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/Text.Medium"
                        android:id="@+id/tv_lama_berjualan"
                        android:text="@string/lama_berjualan" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        style="@style/Text.Medium"
                        android:layout_width="130dp"
                        android:text="@string/no_telp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Text.Medium"
                        android:layout_width="20dp"
                        android:text="@string/dots" />

                    <TextView
                        style="@style/Text.Medium"
                        android:id="@+id/tv_telp_kedai"
                        android:text="@string/telp_kedai" />
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="16dp"/>

            <TextView
                style="@style/Text.Medium"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/title_kenal_tehkayuaro" />

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_kenal_tehkayuaro"
                android:text="@string/kenal_tehkayuaro"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Medium"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/mau_jual" />

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_mau_jual_tehkayuaro"
                android:text="@string/mau_jual_tehkayuaro"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Medium"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/masalah" />

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_jika_tidak"
                android:text="@string/jika_tidak"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Medium"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_saran" />

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_saran"
                android:text="@string/saran"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Medium"
                android:id="@+id/tv_bantuan"
                android:text="@string/bantuan"
                android:layout_marginHorizontal="20dp"/>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/edit" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>